--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(ICUB_COMPILE_BINDINGS "Compile optional language bindings"  FALSE)
 
-set(YCM_REQUIRED_VERSION "0.11.0")
-set(YARP_REQUIRED_VERSION "3.3.2")
+set(YCM_REQUIRED_VERSION 0.11.0)
+set(YARP_REQUIRED_VERSION 3.3.2)
 
 find_package(YCM ${YCM_REQUIRED_VERSION} REQUIRED)
 find_package(YARP ${YARP_REQUIRED_VERSION} REQUIRED)
