--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,7 +198,8 @@ jobs:
       shell: bash
       run: |
         chmod +x ./.ci/create_icub-common_deb.sh
-        apt install git
+        apt-get update -y
+        apt-get install -y git
         _ICUB_VER=$(git describe --tags | grep -o -P '(?<=v).*(?=-)' | grep -o -P '.*(?=-)')
         echo "creating Package for ver $_ICUB_VER"
         ./.ci/create_icub-common_deb.sh -V $_ICUB_VER
