--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,8 +198,5 @@ jobs:
       shell: bash
       run: |
         chmod +x ./.ci/create_icub-common_deb.sh
-        apt-get update -y
-        apt-get install -y git
-        _ICUB_VER=$(git describe --tags | grep -o -P '(?<=v).*(?=-)' | grep -o -P '.*(?=-)')
-        echo "creating Package for ver $_ICUB_VER"
-        ./.ci/create_icub-common_deb.sh -V $_ICUB_VER
+        #_ICUB_VER=$(git describe --tags | grep -o -P '(?<=v).*(?=-)' | grep -o -P '.*(?=-)')
+        ./.ci/create_icub-common_deb.sh -V 1.16.0
