--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -9,6 +9,8 @@
 # put B before A. Failure to do so might break the build.
 #
 
+include(${PROJECT_SOURCE_DIR}/conf/iCubInstallBasicPackageFiles.cmake)
+
 add_subdirectory(iCubDev)
 add_subdirectory(ctrlLib)
 add_subdirectory(skinDynLib)
