iDyn: port to COMPONENTS

--- a/src/libraries/iDyn/CMakeLists.txt
+++ b/src/libraries/iDyn/CMakeLists.txt
@@ -17,6 +17,7 @@ set(folder_header include/iCub/iDyn/iDyn.h
                   include/iCub/iDyn/iDynContact.h)
 
 add_library(${PROJECT_NAME} ${folder_source} ${folder_header})
+add_library(ICUB::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 target_compile_definitions(${PROJECT_NAME} PRIVATE _USE_MATH_DEFINES)
 
 target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
@@ -25,10 +26,21 @@ target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${PROJECT_S
 target_link_libraries(${PROJECT_NAME} iKin
                                       skinDynLib
                                       ${YARP_LIBRARIES})
+set_target_properties(${PROJECT_NAME} PROPERTIES
+                                      PUBLIC_HEADER "${folder_header}")
 
-icub_export_library(${PROJECT_NAME} INTERNAL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
-                                    DEPENDS iKin skinDynLib
-                                    DESTINATION include/iCub/iDyn
-                                    FILES ${folder_header})
+install(TARGETS ${PROJECT_NAME}
+        EXPORT ${PROJECT_NAME}
+        LIBRARY
+            DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        PUBLIC_HEADER
+            DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/iCub/iDyn")
 
 
+icub_install_basic_package_files(${PROJECT_NAME}
+                                 DEPENDENCIES iKin
+                                              skinDynLib
+                                              YARP_os
+                                              YARP_sig
+                                              YARP_dev
+                                              YARP_math)
