--- a/src/libraries/iDyn/CMakeLists.txt
+++ b/src/libraries/iDyn/CMakeLists.txt
@@ -38,8 +38,8 @@ install(TARGETS ${PROJECT_NAME}
 
 
 icub_install_basic_package_files(${PROJECT_NAME}
-                                 DEPENDENCIES iKin
-                                              skinDynLib
+                                 DEPENDENCIES "iKin HINTS \"\${CMAKE_CURRENT_LIST_DIR}/..\""
+                                              "skinDynLib HINTS \"\${CMAKE_CURRENT_LIST_DIR}/..\""
                                               YARP_os
                                               YARP_sig
                                               YARP_dev
