--- a/src/libraries/perceptiveModels/CMakeLists.txt
+++ b/src/libraries/perceptiveModels/CMakeLists.txt
@@ -40,5 +40,5 @@ install(TARGETS ${PROJECT_NAME}
 
 
 icub_install_basic_package_files(${PROJECT_NAME}
-                                 DEPENDENCIES ctrlLib
-                                              learningMachine)
+                                 DEPENDENCIES "ctrlLib HINTS \"\${CMAKE_CURRENT_LIST_DIR}/..\""
+                                              "learningMachine HINTS \"\${CMAKE_CURRENT_LIST_DIR}/..\"")
