--- a/src/libraries/iKin/CMakeLists.txt
+++ b/src/libraries/iKin/CMakeLists.txt
@@ -42,8 +42,7 @@ endif()
 
 target_link_libraries(${PROJECT_NAME} ctrlLib ${YARP_LIBRARIES})
 
-set(IKIN_DEPENDENCIES  "ctrlLib HINTS \"\${CMAKE_CURRENT_LIST_DIR}/..\""
-                       YARP_os
+set(IKIN_DEPENDENCIES  YARP_os
                        YARP_sig
                        YARP_dev
                        YARP_math)
@@ -70,4 +69,5 @@ install(TARGETS ${PROJECT_NAME}
 
 
 icub_install_basic_package_files(${PROJECT_NAME}
+                                 INTERNAL_DEPENDENCIES ctrlLib
                                  DEPENDENCIES ${IKIN_DEPENDENCIES})
