--- a/app/faceExpressions/conf/emotions_rfe.ini
+++ b/app/faceExpressions/conf/emotions_rfe.ini
@@ -2,19 +2,19 @@
 emotions 10
 
 //configuration of facial expressions
-//index name Left-Eyebrow(HEX) Right-Eyebrow(HEX) Mouth(HEX) Eyelids(% open)
+//index name Left-Eyebrow(HEX) Right-Eyebrow(HEX) Mouth(HEX) Eyelids(% open, e.g 00=0%, 05=50%, 10 = 100%)
 //index starts at 1
 
-E1   neu 00h 00h 00h 38h
-E2   ta1 **h **h 00h **h
-E3   ta2 **h **h 03h **h
-E4   hap 01h 01h 01h 70h
-E5   sad 02h 02h 02h 38h
-E6   sur 03h 03h 03h 38h
-E7   ang 04h 04h 04h 70h
-E8   evi 05h 05h 05h 70h
-E9   shy 06h 06h 06h 70h
-E10  cun 07h 07h 07h 38h
+E1   neu 00h 00h 00h 00p
+E2   ta1 **h **h 00h **p
+E3   ta2 **h **h 03h **p
+E4   hap 01h 01h 01h 10p
+E5   sad 02h 02h 02h 00p
+E6   sur 03h 03h 03h 00p
+E7   ang 04h 04h 04h 10p
+E8   evi 05h 05h 05h 10p
+E9   shy 06h 06h 06h 10p
+E10  cun 07h 07h 07h 00p
 
 //number of colors
 colors 16
