--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,13 +32,14 @@ jobs:
     - name: Install Deps
       shell: bash
       run: |
+        apt update 
         apt install -y git
         apt install -y lsb-release
 
     - name: Get Latest Tag
       id: get_latest_tag
       uses: WyriHaximus/github-action-get-previous-tag@0.2.0
-      
+
     - name: Generate icub-common metapackage [${{ matrix.docker_image }}]
       shell: bash
       run: |
