--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,11 @@ jobs:
     container:
       image: ${{ matrix.docker_image }}
     steps:
+    - uses: actions/checkout@master
+    
     - name: Get Latest Tag
       id: get_latest_tag
       uses: WyriHaximus/github-action-get-previous-tag@0.2.0
-      uses: actions/checkout@master
 
     - name: Generate icub-common metapackage [${{ matrix.docker_image }}]
       shell: bash
