--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,8 @@ jobs:
 
     - uses: actions/checkout@master
 
+    - run: git fetch --prune --unshallow
+
     - name : test
       shell: bash
       run: |
